Removed nodejs as it is overkill

--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
-<!DOCTYPE html>
-<html class="mdc-typography">
+<!doctype html>
+
+<html>
 
 <head>
-    <title>Material Components for the web</title>
-    <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+    <title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0">
 </head>
 
 <body>
-    <h2 class="mdc-typography--display2">Hello, Material Components!</h2>
-    <div class="mdc-textfield" data-mdc-auto-init="MDCTextfield">
-        <input type="text" class="mdc-textfield__input" id="demo-input">
-        <label for="demo-input" class="mdc-textfield__label">Tell us how you feel!</label>
-    </div>
-    <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
-    <script>
-        mdc.autoInit()
 
-    </script>
 </body>
 
 </html>
